--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         appCompatVersion = '1.2.0'
         constraintLayoutVersion = '1.1.3'
         materialComponentsVersion = '1.2.1'
-        roomVersion = '2.2.5'
+        roomVersion = '2.4.1'
         fragmentVersion = '1.2.5'
         lifecycleVersion = '2.2.0'
         androidXArchTestVersion = '2.0.0'
@@ -17,8 +17,9 @@ buildscript {
         jsonhandleviewVersion = '1.2.2'
 
         // Networking
+        brotliVersion = '0.1.2'
         gsonVersion = '2.8.6'
-        okhttp3Version = '4.9.0'
+        okhttpVersion = '4.9.0'
         retrofitVersion = '2.9.0'
         wireVersion = '4.1.0'
 
@@ -28,7 +29,7 @@ buildscript {
         dokkaVersion = '1.4.10.2'
         ktLintVersion = '0.39.0'
         ktLintGradleVersion = '9.4.0'
-        leakcanaryVersion = '2.0'
+        leakcanaryVersion = '2.7'
 
         // Testing
         androidxTestCoreVersion = '1.3.0'
