--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ buildscript {
         mockkVersion = '1.13.2'
         robolectricVersion = '4.9'
         truthVersion = '1.1.3'
+        androidXTestRunner = '1.5.1'
+        androidXTestRules = '1.5.0'
+        androidXTestExt = '1.1.4'
 
         // Publishing
         nexusStagingPlugin = '0.30.0'
