Fix apollo deprecation

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -65,11 +65,13 @@ android {
 }
 
 apollo {
-    packageName.set("com.chuckerteam.chucker.sample")
-    schemaFile.set(file("src/main/graphql/com/chuckerteam/chucker/sample/schema.json.graphql"))
-    srcDir("src/main/graphql")
-    excludes.add("**/schema.json.graphql")
-    excludes.add("**/schema.json")
+    service("rickandmortyapi") {
+        packageName.set("com.chuckerteam.chucker.sample")
+        schemaFile.set(file("src/main/graphql/com/chuckerteam/chucker/sample/schema.json.graphql"))
+        srcDir("src/main/graphql")
+        excludes.add("**/schema.json.graphql")
+        excludes.add("**/schema.json")
+    }
 }
 
 dependencies {
