--- a/gradle/kotlin-static-analysis.gradle
+++ b/gradle/kotlin-static-analysis.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'io.gitlab.arturbosch.detekt'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
+android.sourceSets.configureEach {
+    java.srcDirs("src/$name/kotlin")
+}
+
 ktlint {
     debug = false
     verbose = true
