Re-enable ktlint for the whole project (#1000)

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,10 @@ indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+ktlint_disabled_rules=function-start-of-body-spacing
 
 [*.yml]
 indent_size = 2
+
+[**/test/**.kt]
+ktlint_ignore_back_ticked_identifier=true
