--- a/.github/workflows/close-and-release-repository.yaml
+++ b/.github/workflows/close-and-release-repository.yaml
@@ -9,6 +9,12 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
+    - name: Setup Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu'
+        java-version: '17'
+
     - name: Close and Release Staging Repository
       run: ./gradlew closeAndReleaseStagingRepository
       env:
