--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -24,22 +24,17 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
-    - name: Cache Gradle Folders
-      uses: actions/cache@v3
+    - name: Setup Java
+      uses: actions/setup-java@v3
       with:
-        path: |
-          ~/.gradle/caches/
-          ~/.gradle/wrapper/
-        key: cache-gradle-${{ matrix.kotlin-version }}-${{ hashFiles('build.gradle') }}
-        restore-keys: |
-          cache-gradle-${{ matrix.version }}-
-          cache-gradle-
+        distribution: 'zulu'
+        java-version: '17'
+
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
 
     - name: Run all the tests
       run: ./gradlew test
-
-    - name: Stop Gradle
-      run: ./gradlew --stop
 
   detekt:
     runs-on: [ubuntu-latest]
@@ -48,20 +43,17 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
-    - name: Cache Gradle Folders
-      uses: actions/cache@v3
+    - name: Setup Java
+      uses: actions/setup-java@v3
       with:
-        path: |
-          ~/.gradle/caches/
-          ~/.gradle/wrapper/
-        key: cache-gradle-${{ hashFiles('build.gradle') }}
-        restore-keys: cache-gradle-
+        distribution: 'zulu'
+        java-version: '17'
+
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
 
     - name: Run detekt
       run: ./gradlew detekt
-
-    - name: Stop Gradle
-      run: ./gradlew --stop
 
   lint:
     runs-on: [ubuntu-latest]
@@ -70,20 +62,17 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Cache Gradle Folders
-        uses: actions/cache@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
         with:
-          path: |
-            ~/.gradle/caches/
-            ~/.gradle/wrapper/
-          key: cache-gradle-${{ hashFiles('build.gradle') }}
-          restore-keys: cache-gradle-
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
       - name: Run lint
         run: ./gradlew lint
-
-      - name: Stop Gradle
-        run: ./gradlew --stop
 
   ktlint:
     runs-on: [ubuntu-latest]
@@ -92,20 +81,17 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
-    - name: Cache Gradle Folders
-      uses: actions/cache@v3
+    - name: Setup Java
+      uses: actions/setup-java@v3
       with:
-        path: |
-          ~/.gradle/caches/
-          ~/.gradle/wrapper/
-        key: cache-gradle-${{ hashFiles('build.gradle') }}
-        restore-keys: cache-gradle-
+        distribution: 'zulu'
+        java-version: '17'
+
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
  
     - name: Run ktlint
       run: ./gradlew ktlintCheck
-
-    - name: Stop Gradle
-      run: ./gradlew --stop
 
   api-check:
     runs-on: [ubuntu-latest]
@@ -114,20 +100,17 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Cache Gradle Folders
-        uses: actions/cache@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
         with:
-          path: |
-            ~/.gradle/caches/
-            ~/.gradle/wrapper/
-          key: cache-gradle-${{ hashFiles('build.gradle') }}
-          restore-keys: cache-gradle-
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
       - name: Run apiCheck
         run: ./gradlew apiCheck
-
-      - name: Stop Gradle
-        run: ./gradlew --stop
 
   publish-artifact:
     runs-on: [ubuntu-latest]
@@ -136,14 +119,14 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
 
-    - name: Cache Gradle Folders
-      uses: actions/cache@v3
+    - name: Setup Java
+      uses: actions/setup-java@v3
       with:
-        path: |
-          ~/.gradle/caches/
-          ~/.gradle/wrapper/
-        key: cache-gradle-${{ hashFiles('build.gradle') }}
-        restore-keys: cache-gradle-
+        distribution: 'zulu'
+        java-version: '17'
+
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
           
     - name: Publish to Maven Local
       run: ./gradlew publishToMavenLocal
@@ -156,6 +139,3 @@ jobs:
       with:
         name: 'chucker-local-artifacts'
         path: '~/.m2/repository/'
-
-    - name: Stop Gradle
-      run: ./gradlew --stop
