Prepare for alpha release.

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,9 +23,9 @@ VERSION_NAME=4.1.0-SNAPSHOT
 VERSION_CODE=40100
 GROUP=com.github.chuckerteam.chucker
 
-POM_REPO_NAME=Chucker
-POM_DESCRIPTION=Android in-app HTTP inspector
-POM_URL=https://github.com/ChuckerTeam/chucker
-POM_SCM_CONNECTION=scm:git:git://github.com/ChuckerTeam/chucker.git
+POM_REPO_NAME=ComposeChucker
+POM_DESCRIPTION=Android in-app HTTP inspector for Jetpack Compose
+POM_URL=https://github.com/rohitjakhar/ComposeChucker
+POM_SCM_CONNECTION=scm:git:git://github.com/rohitjakhar/ComposeChucker.git
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
