--- a/gradle.properties
+++ b/gradle.properties
@@ -18,10 +18,10 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=4.1.0-SNAPSHOT
+VERSION_NAME=0.0.1
 # 4*100*100 + 1*100 + 0 => 40100
 VERSION_CODE=40100
-GROUP=com.github.chuckerteam.chucker
+GROUP=com.github.rohitjakhar.composechucker
 
 POM_REPO_NAME=ComposeChucker
 POM_DESCRIPTION=Android in-app HTTP inspector for Jetpack Compose
