--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ android.useAndroidX=true
 VERSION_NAME=0.0.2
 # 4*100*100 + 1*100 + 0 => 40100
 VERSION_CODE=40100
-GROUP=com.github.rohitjakhar.composechucker
+GROUP=io.github.rohitjakhar.composechucker
 
 POM_REPO_NAME=ComposeChucker
 POM_DESCRIPTION=Android in-app HTTP inspector for Jetpack Compose
