--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,6 @@ ext {
 nexusStaging {
     serverUrl = "https://s01.oss.sonatype.org/service/local/" //required only for projects registered in Sonatype after 2021-02-24
 
-    username = ""
-    password = ""
+    username = findProperty("NEXUS_USERNAME")
+    password = findProperty("NEXUS_PASSWORD")
 }
