--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -1,8 +1,8 @@
 name: Publish Release
 on:
     push:
-        tags:
-            - 'release'
+        branches:
+            - release
 
 jobs:
   publish:
