increase snapshot version.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=0.0.2
+VERSION_NAME=0.0.3-SNAPSHOT
 # 4*100*100 + 1*100 + 0 => 40100
-VERSION_CODE=2
+VERSION_CODE=3
 GROUP=io.github.rohitjakhar
 
 POM_REPO_NAME=ComposeChucker
