--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=4.1.0-SNAPSHOT
+VERSION_NAME=4.1.0
 # 4*100*100 + 1*100 + 0 => 40100
 VERSION_CODE=40100
 GROUP=com.github.chuckerteam.chucker
