Prepare upcoming version

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=4.1.0
-# 4*100*100 + 1*100 + 0 => 40100
-VERSION_CODE=40100
+VERSION_NAME=4.2.0-SNAPSHOT
+# 4*100*100 + 2*100 + 0 => 40200
+VERSION_CODE=40200
 GROUP=com.github.chuckerteam.chucker
 
 POM_REPO_NAME=Chucker
