Added UI test case for main activity

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ buildscript {
         androidXTestRunner = '1.6.2'
         androidXTestRules = '1.6.1'
         androidXTestExt = '1.2.1'
+        androidXExpresso = '3.6.0-alpha01'
+        androidXExtJUnit = '1.2.0-alpha01'
 
         // Publishing
         nexusStagingPlugin = '0.30.0'
