Refactor: Update Gradle and lint configurations
This commit updates the Gradle version and refactors lint configurations across multiple modules:

-   Updated the Android Gradle plugin version from `8.7.3` to `8.9.1` in the root `build.gradle` file.
-   Updated the Gradle wrapper to version `8.11.1` in `gradle-wrapper.properties`.
-   Replaced `lintOptions` with `lint` in the `library`, `sample`, and `library-no-op` modules.
-   Moved the `warningsAsErrors`, `abortOnError`, and `disable` configurations from `lintOptions` to `lint` in `library`, `sample` and `library-no-op`.
-   Applied the `disable 'RtlEnabled', 'GradleDependency'` to the `library`, and `library-no-op` modules.
-   Applied the `disable 'AcceptsUserCertificates', 'GradleDependency'` to the `sample` module.

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -26,20 +26,17 @@ android {
         minSdk rootProject.minSdkVersion
     }
 
-    lintOptions {
-        warningsAsErrors true
-        abortOnError true
-        // We don't want to impose RTL on consuming applications.
-        disable 'RtlEnabled'
-        // Don't fail build if some dependencies outdated
-        disable 'GradleDependency'
-    }
 
     publishing {
         singleVariant('release') {
             withSourcesJar()
             withJavadocJar()
         }
+    }
+    lint {
+        abortOnError true
+        disable 'RtlEnabled', 'GradleDependency'
+        warningsAsErrors true
     }
 }
 
