Added UI test case for main activity (#1352)

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ buildscript {
         androidXTestRunner = '1.6.2'
         androidXTestRules = '1.6.1'
         androidXTestExt = '1.2.1'
+        androidXExpresso = "3.5.1"
+        androidXExtJUnit = "1.1.5"
 
         // Publishing
         nexusStagingPlugin = '0.30.0'
