--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,6 @@ lifecycle = "2.9.1"
 paletteKtx = "1.0.0"
 
 # Networking
-brotli = "0.1.2"
 gson = "2.13.1"
 okhttp = "4.12.0"
 retrofit = "3.0.0"
@@ -40,7 +39,6 @@ leakcanary = "2.14"
 apollo = "3.8.6"
 
 # Testing
-androidxTestCore = "1.6.1"
 junitGradlePlugin = "1.13.0.0"
 junit = "5.13.1"
 junitPlatformLauncher = "1.13.1"
@@ -50,9 +48,7 @@ robolectric = "4.14.1"
 truth = "1.4.4"
 androidxTestRunner = "1.6.2"
 androidxTestRules = "1.6.1"
-androidxTestExt = "1.2.1"
 androidxEspresso = "3.6.1"
-androidXExtJUnit = "1.2.1"
 
 # Publishing
 nexusStagingPlugin = "0.30.0"
@@ -63,18 +59,15 @@ androidx-activity-ktx = { group = "androidx.activity", name = "activity-ktx", ve
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appCompat" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintLayout" }
 androidx-core = { module = "androidx.test:core", version.ref = "core" }
-#androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCoreKtx" }
 androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "junitVersion" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidx-palette-ktx = { group = "androidx.palette", name = "palette-ktx", version.ref = "paletteKtx" }
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
-# compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "composeUi" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 dec = { module = "org.brotli:dec", version.ref = "dec" }
 jetbrains-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlinStdlib" }
@@ -83,17 +76,13 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 material = { group = "com.google.android.material", name = "material", version.ref = "materialComponents" }
 
 # Networking
-brotli = { group = "com.github.brotilx", name = "brotli", version.ref = "brotli" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver" }
+mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp3-okhttp = { module = "com.squareup.okhttp3:okhttp" }
-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" } # Assuming com.squareup.retrofit2, adjust if needed
-wire-runtime = { group = "com.squareup.wire", name = "wire-runtime", version.ref = "wire" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 
 # Kotlin & Coroutines
-kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 
 # Debug and Quality Control
@@ -103,10 +92,8 @@ leakcanary-android = { group = "com.squareup.leakcanary", name = "leakcanary-and
 apollo-runtime = { group = "com.apollographql.apollo3", name = "apollo-runtime", version.ref = "apollo" }
 
 # Testing
-androidx-test-core = { group = "androidx.test.core", name = "core-ktx", version.ref = "androidxTestCore" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "androidxTestRules" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidxTestExt" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxEspresso" }
 junit = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 junit-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
@@ -130,17 +117,4 @@ ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktLintGradle" }
 kotlinx-binary-compatibility-validator = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "binaryCompatibilityValidator" }
 wire = { id = "com.squareup.wire", version.ref = "wire" }
 nexus-staging = { id = "io.codearte.nexus-staging", version.ref = "nexusStagingPlugin" }
-
-[bundles]
-testing-android = [
-    "androidx-test-core",
-    "androidx-test-runner",
-    "androidx-test-rules",
-    "androidx-test-ext-junit",
-    "androidx-espresso-core",
-    "mockk",
-    "truth",
-    "robolectric"
-]
-room = ["androidx-room-runtime", "androidx-room-ktx"]
 
