Move the Central Publishing

--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -35,7 +35,7 @@ jobs:
         path: '~/.m2/repository/'
 
     - name: Publish to the Staging Repository
-      run: ./gradlew publishReleasePublicationToStagingRepository --no-parallel
+      run: ./gradlew publishToSonatype --no-parallel
       env:
         ORG_GRADLE_PROJECT_SIGNING_KEY: ${{ secrets.ORG_GRADLE_PROJECT_SIGNING_KEY }}
         ORG_GRADLE_PROJECT_SIGNING_PWD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNING_PWD }}
