--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=4.2.0-SNAPSHOT
+VERSION_NAME=4.2.0
 # 4*100*100 + 2*100 + 0 => 40200
 VERSION_CODE=40200
 GROUP=com.github.chuckerteam.chucker
