--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace "com.chuckerteam.chucker"
+
     compileSdkVersion rootProject.compileSdkVersion
 
     compileOptions {
@@ -21,8 +23,8 @@ android {
 
     android {
         compileOptions {
-            sourceCompatibility JavaVersion.VERSION_17
-            targetCompatibility JavaVersion.VERSION_17
+            sourceCompatibility 1.8
+            targetCompatibility 1.8
         }
     }
 
@@ -34,10 +36,6 @@ android {
         // Don't fail build if some dependencies outdated
         disable 'GradleDependency'
     }
-}
-
-kotlin {
-    jvmToolchain(17)
 }
 
 dependencies {
