--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,6 +7,8 @@ wire {
 }
 
 android {
+    namespace "com.chuckerteam.chucker.sample"
+
     compileSdkVersion rootProject.compileSdkVersion
 
     defaultConfig {
@@ -46,8 +48,8 @@ android {
 
     android {
         compileOptions {
-            sourceCompatibility JavaVersion.VERSION_17
-            targetCompatibility JavaVersion.VERSION_17
+            sourceCompatibility 1.8
+            targetCompatibility 1.8
         }
     }
 
@@ -60,17 +62,13 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 
     kotlinOptions {
-        jvmTarget = "17"
+        jvmTarget = "1.8"
     }
-}
-
-kotlin {
-    jvmToolchain(17)
 }
 
 dependencies {
