upgraded kotlin and java compile options

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -21,11 +21,13 @@ android {
         minSdkVersion rootProject.minSdkVersion
     }
 
-    android {
-        compileOptions {
-            sourceCompatibility 1.8
-            targetCompatibility 1.8
-        }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     lintOptions {
