Prepare the upcoming version

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,9 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
-VERSION_NAME=4.3.0
-# 4*100*100 + 3*100 + 0 => 40300
-VERSION_CODE=40300
+VERSION_NAME=4.4.0-SNAPSHOT
+# 4*100*100 + 4*100 + 0 => 40400
+VERSION_CODE=40400
 GROUP=com.github.chuckerteam.chucker
 
 POM_REPO_NAME=Chucker
